# scavenger

./: Cargo.toml
src/: config.rs  cpu_worker.rs  main.rs  miner.rs  ocl.rs  reader.rs  requests.rs
src/com/: api.rs  client.rs
src/future/: prio_retry.rs
