[package]
name = "scavenger"
version = "1.7.8"
license = "GPL-3.0"
authors = ["PoC Consortium <bots@cryptoguru.org>"]
description = """
Scavenger - a PoC miner written in Rust
"""
build = "build.rs"
repository = "https://github.com/PoC-Consortium/scavenger"
documentation = "https://github.com/PoC-Consortium/scavenger"
keywords = ["poc", "miner", "rust","cryptocurrency"]
readme = "README.md"
edition = "2018"

[features]
simd = []
neon = []
opencl = ["ocl-core"]

[dependencies]
cfg-if = "1.0"
clap = "~2.33"
core_affinity = "0.5.10"
crossbeam-channel = "0.5"
filetime = "0.2"
futures = "0.3"
hex = "0.4"
hostname = "0.3.1"
libc = "0.2"
log = "0.4"
log4rs = { version = "0.13", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
num_cpus = "1.13"
ocl-core = { version = "0.11.2", optional = true } 
pbr = "1.0.3"
rand = "0.7.3"
rayon = "1.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
stopwatch = "0.0.7"
tokio = { version="0.3", features=["time", "stream", "sync", "rt-multi-thread", "macros"]}
url = "2.2.0"
page_size = "0.4.2"
aligned_alloc = "0.1"
reqwest = { version = "0.10.8", default-features = false, features = ["rustls-tls", "json"] }
bytes = "0.6.0"
url_serde = "0.2"
async-trait= "0.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi"] }

[build-dependencies]
cc = "1.0"
cfg-if = "1.0"
